# MutationOrder

./: .travis.yml  MutationOrder.cabal  README.md  cabal.project  changelog.md  devel-stack.yaml  runlist.sh  stack.yaml
.travis/: prepare-release.sh
BioInf/: MutationOrder.hs
BioInf/MutationOrder/: BackMutations.hs  EdgeProb.hs  MinDist.hs  RNA.hs  SequenceDB.hs
src/: MutationOrder.hs
