name:           MutationOrder
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2017
copyright:      Christian Hoener zu Siederdissen, 2017
homepage:       https://github.com/choener/MutationOrder
bug-reports:    https://github.com/choener/MutationOrder/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2
synopsis:       Most likely order of mutation events in RNA
description:
                Determine the most likely order in which single nucleotide
                mutations happened between two RNA sequences.
                .
                Developed to analyse the @HAR 1@ region.
                .
                Details can be found in the following paper:
                .



Extra-Source-Files:
  README.md
  changelog.md



library
  build-depends: base                   >= 4.7    &&  < 5.0
               , bytestring
               , cereal                 >= 0.5
               , cereal-vector          >= 0.2
               , deepseq                >= 1.4
               , filepath
               , log-domain             >= 0.10
               , parallel               >= 3.2
               , text                   >= 1.0
               , vector                 >= 0.11
               , vector-strategies      >= 0.4
               , zlib                   >= 0.6
               --
               , ADPfusion              == 0.5.2.*
               , ADPfusionSet           == 0.0.0.*
               , FormalGrammars         == 0.3.1.*
               , PrimitiveArray         == 0.8.0.*
               , PrimitiveArray-Pretty  == 0.0.0.*
               , ShortestPathProblems   == 0.0.0.*
               , ViennaRNA-bindings     == 0.225.1.*
  exposed-modules:
    BioInf.MutationOrder
    BioInf.MutationOrder.RNA
--    BioInf.MutationOrder.MinDist
--    BioInf.MutationOrder.EdgeProb
--    BioInf.MutationOrder.ScoreMat
  default-extensions: BangPatterns
                    , DeriveGeneric
                    , FlexibleContexts
                    , GADTs
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , QuasiQuotes
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  default-language:
    Haskell2010
  ghc-options:
    -O2 -funbox-strict-fields



executable MutationOrder
  build-depends: base
               , cmdargs      >= 0.10
               , filepath
               --
               , MutationOrder
  hs-source-dirs:
    src
  default-extensions: BangPatterns
                    , DeriveDataTypeable
                    , RecordWildCards
  main-is:
    MutationOrder.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , CPP
                    , FlexibleContexts
                    , FlexibleInstances
                    , MultiParamTypeClasses
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
  build-depends: base
               , QuickCheck
               , tasty                        >= 0.11
               , tasty-quickcheck             >= 0.8
               , tasty-th                     >= 0.1
               , vector
               --
               , MutationOrder


source-repository head
  type: git
  location: git://github.com/choener/MutationOrder

